<resources>

    <!-- Activity/App Titles -->
    <string name="app_name">TaskTracker</string>
    <string name="menu_settings">Settings</string>
    <string name="home">Home</string>
    <string name="myTasks">My Tasks</string>
    <string name="create_a_task">Create a Task</string>
    <string name="notifications">Notifications</string>
    <string name="camera">Camera</string>
    <string name="photo_picker">Photo Picker</string>
    
    <!-- Login -->
    <string name="tasktracker_login">TaskTracker Login</string>
    <string name="tasktracker_create_account">Create a New Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="button_login">Login</string>
    <string name="button_create_account">Sign up!</string>

    <!-- Task Headings -->
    <string name="heading_taskName">Task Name</string>
    <string name="heading_deadline">Deadline:</string>
    <string name="heading_status">Status:</string>
    <string name="heading_taskDescription">Task Description:</string>
    <string name="heading_otherMembers">Other Members (Optional):</string>
    <string name="heading_allMembers">Members:</string>
    <string name="heading_requirements">Requirements:</string>
    <string name="text">Text</string>
    <string name="photo">Photo</string>
    <string name="private_task">This task is private.  Only members may view and fulfill it.</string>

    <!-- Task Hints -->
    <string name="hint_taskName">New Task Name</string>
    <string name="hint_dateFormat">yyyy-mm-dd</string>
    <string name="hint_taskDescription">Enter a description.</string>
    <string name="hint_otherMembers">e.g., bond, jdoe, mjane</string>
    <string name="hint_textFulfillment">Add some text to fulfill this task.</string>

    <!-- Task View Defaults -->
    <string name="default_name">[title]</string>
    <string name="default_status">[status]</string>
    <string name="default_description">[description]</string>
    <string name="default_members">[members]</string>
    <string name="default_creationInfo">Created on [date] by [creator].</string>
    
    <!-- Buttons -->
    <string name="createTask">Create Task</string>
    <string name="button_fulfill">Mark this task as fulfilled</string>
    <string name="button_unsubscribe">Unsubscribe</string>
    <string name="button_expand">View more&#8230;</string>
    <string name="button_collapse">View less&#8230;</string>
    <string name="descr_overflow_button">Temp descr overflow button</string>
   
    <!-- Auto-generated by Android -->
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_task_fulfillment_view">TaskFulfillmentView</string>
    <string name="title_activity_login">Login</string>
    
    <!-- Menus -->
    <string name="help">Help</string>
    <string name="Account">Account</string>
    <string name="change_name">Change Name</string>
    <string name="change_password">Change Password</string>
	<string name="change_email">Change Email</string>
    <string name="logout">Logout</string>
    <string name="availableOffline">Available Offline:</string>
    
</resources>
