<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/buttons"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_below="@+id/buttons"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" >

        <TextView
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/hint_taskName"
            android:textSize="20dp"
            android:textStyle="bold" />
        <!--
        <TextView
            android:id="@+id/viewDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/taskName"
            android:layout_marginRight="12dp"
            android:text="@string/deadline" />

        <TextView
            android:id="@+id/editDeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/taskName"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@+id/viewDeadline"
            android:hint="@string/dateFormat"
            android:textSize="14dp" />
        -->

        <TextView
            android:id="@+id/statusHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/taskName"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="12dp"
            android:text="@string/heading_status" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/taskName"
            android:layout_marginBottom="8dp"
            android:layout_toRightOf="@+id/statusHeading"
            android:hint="@string/default_status"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/viewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/statusHeading"
            android:text="@string/heading_taskDescription" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/viewDescription"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical|top"
            android:hint="@string/default_description"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/viewRequirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:text="@string/heading_requirements" />

        <CheckBox
            android:id="@+id/checkBoxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/viewRequirements"
            android:layout_marginBottom="8dp"
            android:checked="true"
            android:enabled="false"
            android:text="@string/text" />

        <CheckBox
            android:id="@+id/checkBoxPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewRequirements"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/checkBoxText"
            android:enabled="false"
            android:text="@string/photo" />

        <TextView
            android:id="@+id/heading_Members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBoxPhoto"
            android:text="@string/heading_allMembers" />

        <TextView
            android:id="@+id/members"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/heading_Members"
            android:gravity="center_vertical|top"
            android:hint="@string/default_members"
            android:scrollbars="vertical"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/creationInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/members"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/default_creationInfo"
            android:textSize="14dp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/fulfillButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/creationInfo"
            android:text="@string/button_fulfill" />
    </RelativeLayout>

</RelativeLayout>