<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buttons"
    android:layout_width="fill_parent"
    android:layout_height="40dp" >

    <Button
        android:id="@+id/buttonMyTasks"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:background="@color/dark_navy"
        android:layout_margin="1dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/myTasks"
        android:textStyle="bold"
        android:textColor="@color/bright_yellow" />

    <Button
        android:id="@+id/buttonCreateTask"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/buttonMyTasks"
        android:background="@color/dark_navy"
        android:textStyle="bold"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/create_a_task"
        android:textColor="@color/bright_yellow" />

    <Button
        android:id="@+id/buttonNotifications"
        android:layout_width="106dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/buttonCreateTask"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/notifications"
        android:visibility="gone" />

</RelativeLayout>