<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp" >

    <TextView
        android:id="@+id/taskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/myTasks"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/timestamp"
        android:layout_below="@+id/taskName"
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical|top"
        android:hint="@string/hint_taskDescription"
        android:inputType="textMultiLine"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_done"
        android:layout_marginBottom="8dp"
        android:text="@string/hint_dateFormat"
        android:textSize="12dp" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>